Makes desktop view less jarring on initial video load. Adds clickable links to all frame ranges to jump you to the start frame of each range. Fixed some performance issues where we were calculating frame ranges on every frame for no reason.

--- a/app/src/MoveInfo.css
+++ b/app/src/MoveInfo.css
@@ -59,3 +59,9 @@
 .multi-line {
   text-align: left !important;
 }
+
+.Frame-range-spacer {
+  display: inline-block;
+  padding-left: 6px;
+  padding-right: 6px;
+}
