--- a/app/src/index.css
+++ b/app/src/index.css
@@ -317,3 +317,15 @@ kbd {
   box-shadow: 0 1px 0 rgba(12,13,14,0.2), 0 0 0 2px #FFF inset;
   white-space: nowrap;
 }
+
+.Link-button {
+	font-family: "bwmodelica-regular", sans-serif;
+	background: none !important;
+	color: inherit;
+	border: none;
+	padding: 0! important;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit !important;
+	text-decoration: underline;
+}
